--- a/_posts/1970-01-01-template.md
+++ b/_posts/1970-01-01-template.md
@@ -1,12 +1,27 @@
 ---
-title: Portal 通关留念
-published: true
-description: The cake is a lie.
+title: Template
+published: false
+description: Template of new posts.
 categories:
-  - Gaming
+  - Backup
 ---
-Time elapsed: 4.3h
-![portal beaten](https://cdn.jsdelivr.net/gh/celestemoon/CDN/blog/images/2024-09-27-portal-beaten-fig1.jpg)
+
+<!-- markdownlint-capture -->
+<!-- markdownlint-disable -->
+> An example showing the `tip` type prompt.
+{: .prompt-tip }
+
+> An example showing the `info` type prompt.
+{: .prompt-info }
+
+> An example showing the `warning` type prompt.
+{: .prompt-warning }
+
+> An example showing the `danger` type prompt.
+{: .prompt-danger }
+<!-- markdownlint-restore -->
+
+![](https://cdn.jsdelivr.net/gh/celestemoon/CDN/blog/celesteMoon.png)
 
 <script src="https://giscus.app/client.js"
         data-repo="celesteMoon/BlogComments-giscus"
